--- a/src/Pages/BulkUpdate/BulkUpdate.module.css
+++ b/src/Pages/BulkUpdate/BulkUpdate.module.css
@@ -53,7 +53,7 @@
   }
   .Outercontainer textarea {
   width: 600px;
-  height: 90%;
+  height: 100%;
   background-color: white;
   padding: 1rem;
   border-radius: 0.8rem;
@@ -75,7 +75,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
+    margin-top: 4.5rem;
     gap: 1rem;
 
  }
@@ -94,11 +95,36 @@
     border: 1px solid #ccc;
 }
 
+.assignedto label{
+ display: inline-block;
+     text-align: left;
+    font-weight: 500;
+    font-size: 1.3rem;
+}
+.assignedto input{
+ width: 610px;
+    height: 40px;
+    border-radius: 1rem;
+    border: 1px solid #ccc;
+}
+.remarks label{
+ display: inline-block;
+     text-align: left;
+    font-weight: 500;
+    font-size: 1.3rem;
+}
+.remarks input{
+ width: 610px;
+    height: 120px;
+    border-radius: 1rem;
+    border: 1px solid #ccc;
+}
+
   .btncontainer {
   display: flex;
   justify-content: flex-end;
   gap: 1.5rem;
-  margin-top: 10rem;
+  margin-top: 5rem;
 }
 
 .resetbtn{
